exports[`buildStatus returns correct build status for the \`blocked\` state 1`] = `
Object {
  "prefix": "Blocked",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`canceled\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`canceling\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`failed\` state 1`] = `
Object {
  "prefix": "Finished",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`not_run\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`passed\` state 1`] = `
Object {
  "prefix": "Finished",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`running\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`scheduled\` state 1`] = `
Object {
  "prefix": "Scheduled",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`skipped\` state 1`] = `
Object {
  "prefix": "Skipped",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`started\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`blocked\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`canceled\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`canceled\` state 2`] = `
Object {
  "from": undefined,
}
`;

exports[`buildTime returns correct time properties for the \`canceled\` state 3`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`canceling\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`failed\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`not_run\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`passed\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`running\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`scheduled\` state 1`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`skipped\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`started\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;
